--- a/P5/Etape 2/QuoteBox.html
+++ b/P5/Etape 2/QuoteBox.html
@@ -35,7 +35,7 @@
     </div>
     <div class="row" id="Boutton1">
         <div class="col-lg-12">
-            <button onclick="generateMultipleCitations(x,y)" type="button" class="btn btn-secondary btn-lg" id="generate">Générer</button>
+            <button onclick="generateMultipleCitations()" type="button" class="btn btn-secondary btn-lg" id="generate">Générer</button>
         </div>
     </div>
     <div class="row" id="Boutton2">
