--- a/P5/Etape 2/QuoteBox.html
+++ b/P5/Etape 2/QuoteBox.html
@@ -18,12 +18,12 @@
         <div class="col-lg-6">
             <select class="custom-select custom-select-lg mb-3" id="theme">
 				<option selected>Choisissez un thème</option>
-				<option value="Informatique">Informatique</option>
-				<option value="Entrepreneuriat">Entrepreneuriat</option>
+				<option value="style1">Informatique</option>
+				<option value="style2">Entrepreneuriat</option>
 			</select>
         </div>
         <div class="col-lg-6">
-            <select class="custom-select custom-select-lg mb-3" id="nombre">
+            <select class="custom-select custom-select-lg mb-3" id="number">
 				<option selected>Nombre de citation(s)?</option>
 				<option value="1">1</option>
 				<option value="2">2</option>
@@ -35,7 +35,7 @@
     </div>
     <div class="row" id="Boutton1">
         <div class="col-lg-12">
-            <button onclick="generateMultipleCitations()" type="button" class="btn btn-secondary btn-lg" id="generate">Générer</button>
+            <button type="button" class="btn btn-secondary btn-lg" id="generate">Générer</button>
         </div>
     </div>
     <div class="row" id="Boutton2">
@@ -45,8 +45,6 @@
     </div>
     <div class="row">
         <div class="col-lg-12" id="quoteBox">
-            <!--<blockquote>The man who comes back through the door in the wall will never be quite the same as the man who went out.</blockquote>-->
-            <!--<cite>Jean Marmoud</cite>-->
         </div>
     </div>
 
