--- a/P5/Etape 2/QuoteBox.html
+++ b/P5/Etape 2/QuoteBox.html
@@ -31,23 +31,15 @@
 			</select>
         </div>
     </div>
-    <div class="row" id="Boutton1">
-        <div class="col-lg-12">
-            <button type="button" class="btn btn-secondary btn-lg" id="generate">Générer</button>
-        </div>
-    </div>
-    <div class="row" id="Boutton2">
-        <div class="col-lg-12">
-            <button type="button" class="btn btn-secondary btn-lg" id="reset">Effacer</button>
-        </div>
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <button type="button" class="btn btn-secondary" id="generate">Générer</button>
+        <button type="button" class="btn btn-secondary" id="reset">Effacer</button>
     </div>
     <div class="row">
         <div class="col-lg-12" id="quoteBox">
         </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <script src="jsquote.js"></script>
 </body>
 
